--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ nanoserde = "0.1.37"
 semver = "1.0.21"
 ureq = "2.9.6"
 log = "0.4"
-pretty_env_logger = "0.5"
+fern = { version = "0.6", default-features = false, features = ["colored"] }
 argh = "0.1.12"
 dialoguer = { version = "0.11.0", default-features = false }
+regex-lite = "0.1.5"
