--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ argh = "0.1.12"
 dialoguer = { version = "0.11.0", default-features = false }
 regex-lite = "0.1.5"
 owo-colors = "4.0.0"
+indoc = "2.0.4"
 
 [profile.release]
 lto = "fat"
