--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ semver = "1.0.21"
 ureq = "2.9.6"
 log = "0.4"
 fern = { version = "0.6", default-features = false }
-argh = "0.1.12"
+argh = { version = "0.1.12", default-features = false }
 dialoguer = { version = "0.11.0", default-features = false }
 regex-lite = "0.1.5"
 owo-colors = "4.0.0"
