--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-nanoserde = "0.1.37"
+nanoserde = "0.2.1"
 semver = "1.0.21"
-ureq = "2.9.6"
+ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
 log = "0.4"
-fern = { version = "0.6", default-features = false }
+fern = { version = "0.7", default-features = false }
 bpaf = { version = "0.9", default-features = false, features = [
   "autocomplete",
 ] }
-dialoguer = { version = "0.11.0", default-features = false }
+dialoguer = { version = "0.12.0", default-features = false }
 regex-lite = "0.1.5"
 owo-colors = "4.0.0"
 indoc = "2.0.4"
