Allow manually triggering the formula

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -136,3 +136,9 @@ jobs:
           prerelease: ${{ contains(github.ref, 'pre') || contains(github.ref, 'rc') || contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Trigger formula update
+        if: ${{ !contains(github.ref, 'pre') && !contains(github.ref, 'rc') && !contains(github.ref, 'alpha') && !contains(github.ref, 'beta') }}
+        run: gh workflow run update-formula.yml -f tag=${{ github.ref_name }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
